// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArtistsList > matches the snapshot 1`] = `
"<div class="column centerAll noMediaMessage">
  <phusersthree size="50"></phusersthree>
  <p>No artists found.</p>
</div>"
`;

exports[`ArtistsList > when the artists prop is not an empty array > matches the snapshot 1`] = `
"<section class="mediaListWrapper" style="--loop-rows-mobile: 2; --loop-rows-tablet: 3; --loop-rows-desktop: 5; --loop-grid-gap: 24px;">
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-0">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-1">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-2">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-3">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-3" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-3" class="layoutLink" draggable="false">artist-3</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-4">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-4" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-4" class="layoutLink" draggable="false">artist-4</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
</section>"
`;

exports[`ArtistsList > when the artists prop is not an empty array > when viewLayout is gridLayout > matches the snapshot 1`] = `
"<section class="mediaListWrapper" style="--loop-rows-mobile: 2; --loop-rows-tablet: 3; --loop-rows-desktop: 5; --loop-grid-gap: 24px;">
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-0">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-1">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-2">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-3">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-3" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-3" class="layoutLink" draggable="false">artist-3</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-4">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-4" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-4" class="layoutLink" draggable="false">artist-4</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
</section>"
`;

exports[`ArtistsList > when the artists prop is not an empty array > when viewLayout is listLayout > matches the snapshot 1`] = `
"<section class="mediaListWrapper" style="--loop-rows-mobile: 0; --loop-rows-tablet: 0; --loop-rows-desktop: 0; --loop-grid-gap: 0px;">
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-0">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-0" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-0" class="layoutLink" draggable="false">artist-0</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-1">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-1" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-1" class="layoutLink" draggable="false">artist-1</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-2">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-2" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-2" class="layoutLink" draggable="false">artist-2</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-3">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-3" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-3" class="layoutLink" draggable="false">artist-3</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
  <article class="interactionWrapper layoutItem" draggable="false">
    <div class="layoutImage layoutItemImageWrapper">
      <figure><a class="interactionWrapperLink" draggable="false" title="Go to artist artist-4">
          <div class="centerAll preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Go to artist artist-4" class="image" draggable="false" src="image"></div>
        </a></figure>
      <div class="hideOnListLayout layoutItemActions layoutItemActionsEnd layoutItemHoverActions"><button class="centerItems buttonLink alignRight" draggable="false" type="button" title="Unlike artist">
          <phheart aria-hidden="true" class="icon" color="var(--error-color)" size="24" weight="fill"></phheart><span class="clamp text visuallyHidden">Unlike artist</span>
        </button></div>
    </div>
    <div class="layoutContent">
      <p class="strong smallFont clamp2"><a aria-label="Go to artist artist-4" class="layoutLink" draggable="false">artist-4</a></p>
    </div>
    <div class="layoutDropdownMenu layoutItemHoverActions">
      <div class="centerItems dropdownWrapper"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
          <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden"> More</span>
        </button>
        <teleport-stub disabled="false" to="#teleports">
          <!--v-if-->
        </teleport-stub>
      </div>
    </div>
  </article>
</section>"
`;
